--- a/services/quiz/config/config.toml
+++ b/services/quiz/config/config.toml
@@ -10,5 +10,5 @@ host      = "localhost"
 port      = "3306"
 user      = "root"
 password  = "password"
-db_name   = "move_rule"
+db_name   = "garbage_category_rule_quiz"
 ssl_mode  = "disable"
