--- a/ops/db-migrator/Dockerfile
+++ b/ops/db-migrator/Dockerfile
@@ -6,13 +6,14 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o db-migrator
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main .
 
 FROM gcr.io/distroless/base-debian12
 WORKDIR /app
 
 USER 65532
 
-COPY --from=builder /app/db-migrator .
+COPY --from=builder /app/main .
+COPY --from=builder /app/db ./db
 
-ENTRYPOINT ["./db-migrator"]
+ENTRYPOINT ["./main"]
