--- a/ops/db-migrator/Makefile
+++ b/ops/db-migrator/Makefile
@@ -1,5 +1,21 @@
 ROOT_DIR = ../../
 
+# ECR デプロイ用変数
+SERVICE_NAME = db-migrator
+AWS_REGION ?= ap-northeast-1
+AWS_ACCOUNT_ID ?= $(shell aws sts get-caller-identity --query Account --output text)
+ECR_REGISTRY = $(AWS_ACCOUNT_ID).dkr.ecr.$(AWS_REGION).amazonaws.com
+IMAGE_REPOSITORY = $(ECR_REGISTRY)/$(SERVICE_NAME)-$(ENV)
+GIT_COMMIT_HASH ?= $(shell git rev-parse --short HEAD)
+ENV ?= stg
+SUBNET_ID ?= subnet-0f6136e99974839ad
+SECURITY_GROUP_ID ?= sg-0882ca3ecc9e2cd2f
+CLUSTER ?= garbage-category-rule-quiz-$(ENV)
+
+# ================================================
+# マイグレーション関連ターゲット
+# ================================================
+
 # migrationファイルを生成する。
 # e.g.
 # make new DB=garbage_category_rule_quiz NAME=users
@@ -34,13 +50,72 @@ restore: .check-db
 
 # ローカル環境でマイグレーションを実行する。
 # e.g.
-# make run-local
-run-local:
+# make run-local-db DB=garbage_category_rule_quiz
+run-local-db:
 	docker compose up -d
 	sleep 5
 	go run main.go TARGET_DB=$(DB)
 
-PHONY: new up down dump restore run-local
+# ================================================
+# ECR デプロイ用ターゲット
+# ================================================
+
+# ローカルでDockerイメージをビルドする
+# e.g. make build
+build:
+	docker build \
+		-t $(SERVICE_NAME):$(GIT_COMMIT_HASH) \
+		-t $(SERVICE_NAME):latest \
+		.
+
+# ECRにログインする
+# e.g. make ecr-login
+ecr-login:
+	aws ecr get-login-password --region $(AWS_REGION) | docker login --username AWS --password-stdin $(ECR_REGISTRY)
+
+# Dockerイメージをタグ付けしてECRにプッシュする
+# e.g. make push ENV=stg
+push: build ecr-login
+	docker tag $(SERVICE_NAME):$(GIT_COMMIT_HASH) $(IMAGE_REPOSITORY):$(GIT_COMMIT_HASH)
+	docker push $(IMAGE_REPOSITORY):$(GIT_COMMIT_HASH)
+	docker tag $(SERVICE_NAME):$(GIT_COMMIT_HASH) $(IMAGE_REPOSITORY):latest
+	docker push $(IMAGE_REPOSITORY):latest
+
+# ビルド→ECRへpushをまとめて行う
+# e.g. make deploy ENV=stg
+deploy: build push
+	@echo "Deployed $(SERVICE_NAME) to ECR: $(IMAGE_REPOSITORY):$(GIT_COMMIT_HASH)"
+
+# ECSタスクをスタンドアロンで実行する（マイグレーション実行）
+# e.g. make run-ecs ENV=stg DB=garbage_category_rule_quiz
+run-ecs: .check-db
+	aws ecs run-task \
+		--cluster $(CLUSTER) \
+		--task-definition $(SERVICE_NAME)-$(ENV) \
+		--launch-type FARGATE \
+		--network-configuration "awsvpcConfiguration={subnets=[$(SUBNET_ID)],securityGroups=[$(SECURITY_GROUP_ID)],assignPublicIp=DISABLED}" \
+		--overrides "{\"containerOverrides\":[{\"name\":\"app\",\"environment\":[{\"name\":\"MODE\",\"value\":\"up\"},{\"name\":\"TARGET_DB\",\"value\":\"$(DB)\"}]}]}" \
+		--region $(AWS_REGION)
+
+# ローカルで実行する（Docker経由）
+# e.g. make run-local
+run-local:
+	docker run --rm \
+		-e DB_HOST=$(DB_HOST) \
+		-e DB_PORT=$(DB_PORT) \
+		-e DB_USER=$(DB_USER) \
+		-e DB_PASSWORD=$(DB_PASSWORD) \
+		-e TARGET_DB=$(TARGET_DB) \
+		-e MODE=$(MODE) \
+		$(SERVICE_NAME):latest
+
+# クリーンアップ
+# e.g. make clean
+clean:
+	docker rmi $(SERVICE_NAME):$(GIT_COMMIT_HASH) $(SERVICE_NAME):latest || true
+	docker rmi $(IMAGE_REPOSITORY):$(GIT_COMMIT_HASH) $(IMAGE_REPOSITORY):latest || true
+
+.PHONY: new up down dump restore run-local-db build ecr-login push deploy run-ecs run-local clean
 
 .check-name:
 	@if [ -z "$(NAME)" ]; then \
